--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -58,7 +58,7 @@
 
 \begin{document}
 
-\title{Stellar occultation predictions for  9 irregular satellites of giant planets for 2015-2017
+\title{Stellar occultation predictions for  9 irregular satellites of giant planets and Triton for 2015-2017
 %\fnmsep\thanks{Table 8 are only available in electronic form at the CDS via anonymous ftp to cdsarc.u-strasbg.fr (130.79.128.5) or via http://cdsweb.u-strasbg.fr/cgi-bin/qcat?J/A+A/ and IAU NSDC data base at www.imcce.fr/nsdc.}
 %\fnmsep\thanks{The complete version of Table 8 is available through CDS and IAU NSDC data base at www.imcce.fr/nsdc.}
 %\fnmsep\thanks{Partially based on observations made at Laborat\'orio Nacional de Astrof\'{\i}sica (LNA), Itajub\'a-MG, Brazil.}
@@ -298,32 +298,33 @@ Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding
 
 \begin{figure*}
 \begin{centering}
-\subfigure[Nominal prediction]{\includegraphics[width=8.8cm]{figures/Himalia0_2015-03-03T00:39:25.eps}  \label{Fig: occ-Himalia-nooff}}
+\subfigure[Nominal prediction]{\includegraphics[width=8.8cm]{figures/Himalia_nominal.eps}  \label{Fig: occ-Himalia-nooff}}
 \subfigure[\textcolor{red}{Offset de Himalia a partir do ajuste}]{\includegraphics[width=8.8cm]{figures/Himalia2_2015-03-03T00:39:18.png}  \label{Fig: occ-Himalia-ajuste}}
-\subfigure[Observation at February 22 (different FOVs)]{\includegraphics[width=8.8cm]{figures/Himalia3_2015-03-03T00:39:40.png}   \label{Fig: occ-Himalia-off22fev}}
-\subfigure[Observation at March 03 (same FOV)]{\includegraphics[width=8.8cm]{figures/Himalia4_2015-03-03T00:39:15.png}   \label{Fig: occ-Himalia-off03mar}}
-\caption{Predictions for Himalia: The big red dot show the geocentric closest approach of the shadow. The small red ones are the center of the shadow separated by one minute. The straight lines show the size of the shadow. \ref{Fig: occ-Himalia-nooff} is the map using the nominal positions of the star and satellite. \ref{Fig: occ-Himalia-ajuste} shows the shadow given an estimated offset for the position of Himalia related to the JPL ephemeris obtained in section \ref{Sec: Offset}. In \ref{Fig: occ-Himalia-off22fev} we apply offsets to the positions of star and satellite accordingly the observations made at February 22. \ref{Fig: occ-Himalia-off03mar} is as in \ref{Fig: occ-Himalia-off22fev} but with observations made at March 03 when the objects were close to each other. The green dot at the bottom of the maps is the location of Observatório do Pico dos Dias. The black "+" marks at maps (b,c,d) are the nominal prediction closest approach for reference. \textcolor{red}{Figura b será mudada após confirmamos o offset para Himalia}}
+\subfigure[Observation at February 22 (different FOVs)]{\includegraphics[width=8.8cm]{figures/Himalia_22fev.eps}   \label{Fig: occ-Himalia-off22fev}}
+\subfigure[Observation at March 03 (same FOV)]{\includegraphics[width=8.8cm]{figures/Himalia_03mar.eps}   \label{Fig: occ-Himalia-off03mar}}
+\caption{Predictions for Himalia: The big red dot show the geocentric closest approach of the shadow. The black "+" marks at maps (b,c,d) are the nominal prediction closest approach for reference. The small red ones are the center of the shadow separated by one minute. The straight lines show the size of the shadow. \ref{Fig: occ-Himalia-nooff} is the map using the nominal positions of the star and satellite. \ref{Fig: occ-Himalia-ajuste} shows the shadow given an estimated offset for the position of Himalia related to the JPL ephemeris obtained in section \ref{Sec: Offset}. In \ref{Fig: occ-Himalia-off22fev} we apply offsets to the positions of star and satellite accordingly the observations made at February 22. \ref{Fig: occ-Himalia-off03mar} is as in \ref{Fig: occ-Himalia-off22fev} but with observations made at March 03 when the objects were close to each other. The green dot at the bottom of the maps is the location of Observatório do Pico dos Dias. \textcolor{red}{Figura b será mudada após confirmarmos o offset para Himalia}}
 \label{Fig: occ-Himalia}
 \end{centering}
 \end{figure*}
 
-In this event, it is possible to see that the shade does not vary by much among the four maps suggesting thatthere was a good probability of observing the event. In fact, the biggest differences between the shadows of the four maps were 25s and 130km in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
+In this event, it is possible to see that the shade does not vary by much among the four maps suggesting thatthere was a good probability of observing the event. In fact, the biggest differences between the shadows of the four maps were \textcolor{red}{22s and 109km} in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
 
 \begin{table}
-\caption{\label{Tab: comparison-Himalia} Comparison between the predictions of Himalia. \textcolor{red}{Ainda vou terminar de preencher a tabela e tem que ver direito o offset do ajuste}}
+\caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015. \textcolor{red}{Ainda vou terminar de preencher a tabela e tem que ver direito o offset do ajuste}}
 \begin{centering}
 \begin{tabular}{lcc}
 \hline  \hline
 \multicolumn{3}{c}{Difference from nominal prediction} \tabularnewline
 Method  & Instant of C/A  & C/A   \tabularnewline
 \hline
-Nominal & 2015-03-03 00:39:25 UT & $0.714\arcsec$ \tabularnewline
-Offset & -07 s & \tabularnewline
-Feb. 22 Obs. & +15 s &  \tabularnewline
-Mar. 03 Obs. & -10 s & \tabularnewline
+Nominal & 00:39:25 UTC & $0.714\arcsec$ \tabularnewline
+Offset &   & \tabularnewline
+Feb. 22 Obs. & +12s & -33mas (109km) \tabularnewline
+Mar. 03 Obs. & -10s & -19mas (61km)\tabularnewline
 \hline
 \end{tabular}
 \par\end{centering}
+
 \end{table}
 
 The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 they could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The biggest differences between them were 73s along the shadow path and 302km perpendicular to it (see table \ref{Tab: comparison-Elara}).
@@ -336,7 +337,7 @@ The second test was with the satellite Elara, which is the second largest irregu
 \multicolumn{3}{c}{Difference from nominal prediction} \tabularnewline
 Method  & Instant of C/A  & C/A  \tabularnewline
 \hline
-Nominal & 2015-03-30 01:45:15 UT & $1.139\arcsec$ \tabularnewline
+Nominal & 2015-03-30 01:45:15 UTC & $1.139\arcsec$ \tabularnewline
 Offset & -16 s & \tabularnewline
 Mar. 25 Obs. & -58 s &  \tabularnewline
 Apr. 02 Obs. & +15 s & \tabularnewline
