--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -180,7 +180,12 @@ We present in this paper stellar occultation predictions for the 7 major irregul
 \textcolor{red}{E dizer que, mesmo que a hipotese de TNOs que nos motiva a fazer as predicoes, venha a ser refutada no futuro, seja por outros trabalhos, seja pelos resultados futuros de observacoes de nossas proprias ocultacoes, o levantamento em si das propriedades fisicas, tamanho, forma e albedo ainda assim seriam muito uteis para testar as hiposteses de captura, ou seja, contribui para o estudo da formacao e evolucao dos sistemas de Jupiter, Saturno e Netuno.}
 
 As explicited in section \ref{Sec: introducao}, there is no consensus on a single model about the region where the irregular satellites were formed. 
-%This idea is supported by the 
+
+Phoebe, the most studied irregular satellite, was identified by \cite{Clark2005} that it has surface material probably of cometary origin. It was also stated by \cite{Johnson2005} that if the porosity of Phoebe would be of about 15\%, Phoebe would have an uncompressed density similar to those of Pluto and Triton.
+
+Triton is a special satellite. Its orbit is retrograde and inclined, but quasi-circular and very close to the planet compared to the irregular ones. Because Triton's orbit is very small and the its precession is not dominated by Solar perturbations, Triton is frequently excluded of the irregular satellites' class, but studied together by many authors \citep{Sheppard2005, Jewitt2007}. 
+
+Similar to the irregular satellites, Triton was probably capture in the early Solar System and may have a similar origin as the TNOs \citep{Agnor2006}. Differently, Triton is bigger than the irregular satellites by an order of magnitude and has an atmosphere. 
 
 %Because they are faint, the majority of these objects was discovered only in the last century\footnote{Website: http://ssd.jpl.nasa.gov/?sat\_discovery} . They were never visited by a spacecraft, with the exception of Himalia, Phoebe and Nereid, in a flyby by the Cassini space probe in 2000 for Himalia \citep{Porco2003} and in 2004 for Phoebe \citep{Desmars2013} and in a flyby by the Voyager 2 space probe in 1989 for Nereid \citep{Smith1989}. Even in situ, they were still opportunity target observations resulting in not optimal measurements, with size errors of $10 km$ for Himalia and $25 km$ for Nereid \citep{Thomas1991}. The exception is Phoebe with a very accurate measurement of size with a mean radius error of $0.7 km$ \citep{Thomas2010}.
 
