--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -124,6 +124,34 @@ month={May},
 pages={66–69}
 }
 
+@article{Johnson2005,
+title={Saturn’s moon Phoebe as a captured body from the outer Solar System},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03384},
+DOI={10.1038/nature03384},
+number={7038},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Johnson, Torrence V. and Lunine, Jonathan I.},
+year={2005},
+month={May},
+pages={69–71}
+}
+
+@article{Agnor2006,
+title={Neptune’s capture of its moon Triton in a binary–planet gravitational encounter},
+volume={441},
+url={http://dx.doi.org/10.1038/nature04792},
+DOI={10.1038/nature04792},
+number={7090},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Agnor, Craig B. and Hamilton, Douglas P.},
+year={2006},
+month={May},
+pages={192–194}
+}
+
 @article{Grav2007,
 title={A deeper look at the colors of the saturnian irregular satellites},
 volume={191},
@@ -150,6 +178,31 @@ author={Nesvorný, David and Vokrouhlický, David and Morbidelli, Alessandro},
 year={2007},
 month={Mar},
 pages={1962–1976}
+}
+
+@article{Jewitt2007,
+title={Irregular Satellites of the Planets: Products of Capture in the Early Solar System},
+volume={45},
+url={http://dx.doi.org/10.1146/annurev.astro.44.051905.092459},
+DOI={10.1146/annurev.astro.44.051905.092459},
+number={1},
+journal={Annual Review of Astronomy and Astrophysics},
+publisher={Annual Reviews},
+author={Jewitt, David and Haghighipour, Nader},
+year={2007},
+month={Sep},
+pages={261–295}
+}
+
+@article{McKinnon2007,
+title={Triton},
+url={http://dx.doi.org/10.1016/B978-012088589-3/50030-X},
+DOI={10.1016/b978-012088589-3/50030-x},
+journal={Encyclopedia of the Solar System},
+publisher={Elsevier BV},
+author={McKinnon, W and Kirk, R},
+year={2007},
+pages={483–502}
 }
 
 @article{Peng2008,
