--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -170,22 +170,22 @@ We present in this paper stellar occultation predictions for the 7 major irregul
 
 \section{Scientific Rationale} \label{Sec: Rationale}
 
-\textcolor{red}{Como pode ver, comparado ao paragrafo na Introducao que falou a respeito, o texto aqui está muito pequeno e chovendo no molhado.}
+%\textcolor{red}{Como pode ver, comparado ao paragrafo na Introducao que falou a respeito, o texto aqui está muito pequeno e chovendo no molhado.}
 
-\textcolor{red}{Tem que falar mais. Citar o paper no livro da Barucci que voce me mostrou outro dia. Dar mais citacoes sobre essa hipotese. Falar dos albedos parecidos, cores. Tem que fundamentar a hipotese de irregulares = TNOs pequenos.}
+%\textcolor{red}{Tem que falar mais. Citar o paper no livro da Barucci que voce me mostrou outro dia. Dar mais citacoes sobre essa hipotese. Falar dos albedos parecidos, cores. Tem que fundamentar a hipotese de irregulares = TNOs pequenos.}
 
-\textcolor{red}{Tambem falar aqui das vantagens de se observar ocultacoes dos irregulares, porque apesar de alguns satelites terem efemerides ruins, outros nem tanto, as efemerides sao melhores que a de TNOs (os irregulares ja completaram voltas em torno dos seus planetas); no caso de Jupiter, ele esta proximo o que ajuda a diminuir o erro em km.}
+%\textcolor{red}{Tambem falar aqui das vantagens de se observar ocultacoes dos irregulares, porque apesar de alguns satelites terem efemerides ruins, outros nem tanto, as efemerides sao melhores que a de TNOs (os irregulares ja completaram voltas em torno dos seus planetas); no caso de Jupiter, ele esta proximo o que ajuda a diminuir o erro em km.}
 
 
-\textcolor{red}{E dizer que, mesmo que a hipotese de TNOs que nos motiva a fazer as predicoes, venha a ser refutada no futuro, seja por outros trabalhos, seja pelos resultados futuros de observacoes de nossas proprias ocultacoes, o levantamento em si das propriedades fisicas, tamanho, forma e albedo ainda assim seriam muito uteis para testar as hiposteses de captura, ou seja, contribui para o estudo da formacao e evolucao dos sistemas de Jupiter, Saturno e Netuno.}
+%\textcolor{red}{E dizer que, mesmo que a hipotese de TNOs que nos motiva a fazer as predicoes, venha a ser refutada no futuro, seja por outros trabalhos, seja pelos resultados futuros de observacoes de nossas proprias ocultacoes, o levantamento em si das propriedades fisicas, tamanho, forma e albedo ainda assim seriam muito uteis para testar as hiposteses de captura, ou seja, contribui para o estudo da formacao e evolucao dos sistemas de Jupiter, Saturno e Netuno.}
 
 As explicited in section \ref{Sec: introducao}, there is no consensus on a single model about the region where the irregular satellites were formed. 
 
-Phoebe, the most studied irregular satellite, was identified by \cite{Clark2005} that it has surface material probably of cometary origin. It was also stated by \cite{Johnson2005} that if the porosity of Phoebe would be of about 15\%, Phoebe would have an uncompressed density similar to those of Pluto and Triton.
+Phoebe, the most studied irregular satellite, was identified by \cite{Clark2005} that its surface is probably covered by material of cometary origin. It was also stated by \cite{Johnson2005} that if the porosity of Phoebe would be of about 15\%, Phoebe would have an uncompressed density similar to those of Pluto and Triton.
 
-Triton is a special satellite. Its orbit is retrograde and inclined, but quasi-circular and very close to the planet compared to the irregular ones. Because Triton's orbit is very small and the its precession is not dominated by Solar perturbations, Triton is frequently excluded of the irregular satellites' class, but studied together by many authors \citep{Sheppard2005, Jewitt2007}. 
+Triton is a special satellite. Its orbit is retrograde and inclined, but quasi-circular and very close to the planet compared to the irregular ones. Because Triton's orbit is very small and its precession is not dominated by Solar perturbations, Triton is frequently excluded of the irregular satellites' class, but studied together by many authors \citep{Sheppard2005, Jewitt2007}. 
 
-Similar to the irregular satellites, Triton was probably capture in the early Solar System and may have a similar origin as the TNOs \citep{Agnor2006}. Differently, Triton is bigger than the irregular satellites by an order of magnitude and has an atmosphere. 
+Similarly to the irregular satellites, Triton was probably capture in the early Solar System and may have a similar origin as the TNOs \citep{Agnor2006}. Differently, Triton is bigger than the irregular satellites by an order of magnitude and has an atmosphere. The main objective to study Triton by stellar occultation is to understand the evolution of its atmosphere due to Triton's complicated and extreme seasonal cycle \citep{McKinnon2007}.
 
 %Because they are faint, the majority of these objects was discovered only in the last century\footnote{Website: http://ssd.jpl.nasa.gov/?sat\_discovery} . They were never visited by a spacecraft, with the exception of Himalia, Phoebe and Nereid, in a flyby by the Cassini space probe in 2000 for Himalia \citep{Porco2003} and in 2004 for Phoebe \citep{Desmars2013} and in a flyby by the Voyager 2 space probe in 1989 for Nereid \citep{Smith1989}. Even in situ, they were still opportunity target observations resulting in not optimal measurements, with size errors of $10 km$ for Himalia and $25 km$ for Nereid \citep{Thomas1991}. The exception is Phoebe with a very accurate measurement of size with a mean radius error of $0.7 km$ \citep{Thomas2010}.
 
@@ -322,7 +322,7 @@ In this event, it is possible to see that the shade does not vary by much among 
 \multicolumn{3}{c}{Difference from nominal prediction} \tabularnewline
 Method  & Instant of C/A  & C/A   \tabularnewline
 \hline
-Nominal & 00:39:25 UTC & $0.714\arcsec$ \tabularnewline
+Nominal & 00:39:25 UTC & $0\farcs714$ \tabularnewline
 Offset &   & \tabularnewline
 Feb. 22 Obs. & +12s & -33mas (109km) \tabularnewline
 Mar. 03 Obs. & -10s & -19mas (61km)\tabularnewline
@@ -332,20 +332,20 @@ Mar. 03 Obs. & -10s & -19mas (61km)\tabularnewline
 
 \end{table}
 
-The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 they could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The biggest differences between them were 73s along the shadow path and 302km perpendicular to it (see table \ref{Tab: comparison-Elara}).
+The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 they could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The biggest differences between them were 74s along the shadow path and 307km perpendicular to it (see table \ref{Tab: comparison-Elara}).
 
 \begin{table}
-\caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara. \textcolor{red}{Ainda vou terminar de preencher a tabela e tem que ver direito o offset do ajuste}}
+\caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015. \textcolor{red}{Ainda vou terminar de preencher a tabela e tem que ver direito o offset do ajuste}}
 \begin{centering}
 \begin{tabular}{lcc}
 \hline  \hline
 \multicolumn{3}{c}{Difference from nominal prediction} \tabularnewline
 Method  & Instant of C/A  & C/A  \tabularnewline
 \hline
-Nominal & 2015-03-30 01:45:15 UTC & $1.139\arcsec$ \tabularnewline
-Offset & -16 s & \tabularnewline
-Mar. 25 Obs. & -58 s &  \tabularnewline
-Apr. 02 Obs. & +15 s & \tabularnewline
+Nominal & 01:45:15 UTC & $1\farcs139$ \tabularnewline
+Offset &  & \tabularnewline
+Mar. 25 Obs. & -59 s & -17mas (61km) \tabularnewline
+Apr. 02 Obs. & +15 s & -89mas (307km) \tabularnewline
 \hline
 \end{tabular}
 \par\end{centering}
