--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -1,3 +1,44 @@
+@article{Thomas1991,
+title={Voyager observations of Nereid},
+volume={96},
+url={http://dx.doi.org/10.1029/91JA01735},
+DOI={10.1029/91ja01735},
+number={S01},
+journal={J. Geophys. Res.},
+publisher={Wiley-Blackwell},
+author={Thomas, Peter and Veverka, Joseph and Helfenstein, Paul},
+year={1991},
+pages={19253}
+}
+
+@article{Thomas2000,
+title={The Shape of Triton from Limb Profiles},
+volume={148},
+url={http://dx.doi.org/10.1006/icar.2000.6511},
+DOI={10.1006/icar.2000.6511},
+number={2},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Thomas, P},
+year={2000},
+month={Dec},
+pages={587–588}
+}
+
+@article{Rettig2001,
+title={Implied Evolutionary Differences of the Jovian Irregular Satellites from a BVR Color Survey},
+volume={154},
+url={http://dx.doi.org/10.1006/icar.2001.6715},
+DOI={10.1006/icar.2001.6715},
+number={2},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Rettig, T and Walsh, K. and Consolmagno, G.},
+year={2001},
+month={Dec},
+pages={313–320}
+}
+
 @article{Porco2003,
 title={Cassini Imaging of Jupiter’s Atmosphere, Satellites, and Rings},
 volume={299},
@@ -6,7 +47,7 @@ DOI={10.1126/science.1079462},
 number={5612},
 journal={Science},
 publisher={American Association for the Advancement of Science (AAAS)},
-author={Porco, C. C.},
+author={Porco, C. C. and West, R. A. and McEwen, A. and Del Genio, A. D. and Ingersoll, A. P. and Thomas, P. and Squyres, S. and Dones, L. and others},
 year={2003},
 month={Mar},
 pages={1541–1547}
@@ -232,6 +273,20 @@ month={Jun},
 pages={A32}
 }
 
+@article{Thomas2010,
+title={Sizes, shapes, and derived properties of the saturnian satellites after the Cassini nominal mission},
+volume={208},
+url={http://dx.doi.org/10.1016/j.icarus.2010.01.025},
+DOI={10.1016/j.icarus.2010.01.025},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Thomas, P.C.},
+year={2010},
+month={Jul},
+pages={395–401}
+}
+
 @article{Sicardy2011,
 title={A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation},
 volume={478},
@@ -328,7 +383,7 @@ month={Dec},
 pages={A37}
 }
 
-@article{Camargo2013,
+@article{Camargo2014,
 title={Candidate stellar occultations by Centaurs and trans-Neptunian objects up to 2014},
 volume={561},
 url={http://dx.doi.org/10.1051/0004-6361/201322579},
@@ -336,7 +391,7 @@ DOI={10.1051/0004-6361/201322579},
 journal={Astronomy \& Astrophysics},
 publisher={EDP Sciences},
 author={Camargo, J. I. B. and Vieira-Martins, R. and Assafin, M. and Braga-Ribas, F. and Sicardy, B. and Desmars, J. and Andrei, A. H. and Benedetti-Rossi, G. and Dias-Oliveira, A.},
-year={2013},
+year={2014},
 month={Dec},
 pages={A37}
 }
