--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -170,24 +170,26 @@ Up to date no stellar occultation by irregular satellite is found in the literat
 \multicolumn{4}{c}{Diameter of the satellites} \tabularnewline
 Satellite  & km  & mas\tablefootmark{a} & References \tabularnewline
 \hline
-Ananke & 29 &  & 1 \tabularnewline
-Carme & 46 &  & 1 \tabularnewline
-Elara & 86 &  & 1 \tabularnewline
-Himalia & $(150 \pm 20) \times (120\pm 20)$ &  & 2 \tabularnewline
-Lysithea & 36 &  & 1 \tabularnewline
-Pasiphae & 62 & & 1 \tabularnewline
-Sinope & 37 & & 1 \tabularnewline
+Ananke & 29 & 8 & 1 \tabularnewline
+Carme & 46 & 13 & 1 \tabularnewline
+Elara & 86 & 24 & 1 \tabularnewline
+Himalia & $(150\times120) \pm 20$\tablefootmark{b} & 41 & 2 \tabularnewline
+Lysithea & 36 & 10 & 1 \tabularnewline
+Pasiphae & 62 & 17 & 1 \tabularnewline
+Sinope & 37 & 10 & 1 \tabularnewline
 \hdashline
-Phoebe & $212 \pm 1.4$ & & 3 \tabularnewline
+Phoebe & $212 \pm 1.4$\tablefootmark{b} & 32 & 3 \tabularnewline
 \hdashline
-Nereid & $340 \pm 50$ &  & 4 \tabularnewline
-Triton & $2707 \pm 2.0$ &  & 5 \tabularnewline
+Nereid & $340 \pm 50$\tablefootmark{c} & 15 & 4 \tabularnewline
+Triton & $2707 \pm 2.0$\tablefootmark{c} & 124 & 5 \tabularnewline
 \hline
 \end{tabular}
 \tablebib{
-(1) \cite{Rettig2001}; (2) \cite{Porco2003}; (3) \cite{Thomas2010}; (4) \cite{Thomas1991} (5) \cite{Thomas2000}.}
+(1) \cite{Rettig2001}; (2) \cite{Porco2003}; (3) \cite{Thomas2010}; (4) \cite{Thomas1991}; (5) \cite{Thomas2000}.}
 \end{centering}
-\tablefoottext{a}{Using a mean distance from Jupiter of XX AU, from Saturn of XX AU and from Neptune of XX AU.}
+\tablefoottext{a}{Using a mean distance from Jupiter of 5 AU, from Saturn of 9 AU and from Neptune of 30 AU.}
+\tablefoottext{b}{From Cassini observation.}
+\tablefoottext{c}{From Voyager-2 observation.}
 \par
 \end{table}
 
@@ -344,7 +346,7 @@ Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding
 In this event, it is possible to see that the shade does not vary by much among the four maps suggesting thatthere was a good probability of observing the event. In fact, the biggest differences between the shadows of the four maps were \textcolor{red}{22s and 109km} in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
 
 \begin{table}
-\caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015. \textcolor{red}{Ainda vou terminar de preencher a tabela e tem que ver direito o offset do ajuste}}
+\caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015. \textcolor{red}{Tem que ver direito o offset do ajuste}}
 \begin{centering}
 \begin{tabular}{lcc}
 \hline  \hline
@@ -364,7 +366,7 @@ Mar. 03 Obs. & -10s & -19mas (61km)\tabularnewline
 The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 they could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The biggest differences between them were 74s along the shadow path and 307km perpendicular to it (see table \ref{Tab: comparison-Elara}).
 
 \begin{table}
-\caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015. \textcolor{red}{Ainda vou terminar de preencher a tabela e tem que ver direito o offset do ajuste}}
+\caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015. \textcolor{red}{Tem que ver direito o offset do ajuste}}
 \begin{centering}
 \begin{tabular}{lcc}
 \hline  \hline
@@ -385,34 +387,41 @@ Apr. 02 Obs. & +15 s & -89mas (307km) \tabularnewline
 
 We presented stellar occultations for the period of 2015-2017 for seven irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Lysithea, Pasiphae, and Sinope; one satellite of Saturn: Phoebe; and two satellites of Neptune: Triton and Nereid. The procedure used was the same that predicted stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.
 
-The candidate stars was searched in the UCAC4 catalogue, except for the candidates in 2015 and 2016 for Triton and Nereid. In this case, we used the WFI catalogue that was generated from observations made with ESO2p2/WFI CCD mosaic that covered the path of Neptune in the sky-plane up to 2016.
+The candidate stars was searched in the UCAC4 catalogue, except for the candidates in 2015 and 2016 for Triton and Nereid. In this case, we used the WFI catalogue that was generated from observations made with ESO2p2/WFI CCD mosaic that covered the path of Neptune in the sky-plane up to 2016 (see Sec. \ref{Sec: predictions}).
 
-In table \ref{Tab: satellite-occultation} it's presented the number of stellar occultations predicted by year for each satellite.
+A total of \textcolor{red}{588} events were detected to happen between and the period presented. In table \ref{Tab: satellite-occultation} it's presented the number of stellar occultations predicted by year for each satellite.
 
 \begin{table}
-\caption{\label{Tab: satellite-occultation} Number of stellar occultations for each satellite from 2015 up to 2017}
+\caption{\label{Tab: satellite-occultation} Number of stellar occultations for each satellite from 2015 up to 2017.}
 \begin{centering}
 \begin{tabular}{lcccc}
 \hline  \hline
 %\multicolumn{4}{c}{Diameter of the satellites} \tabularnewline
 Satellite  & 2015  & 2016 & 2017 & Total \tabularnewline
 \hline
-Ananke &  &  & & \tabularnewline
-Carme &  &  &  & \tabularnewline
-Elara &  &  &  & \tabularnewline
-Himalia &  &  &  & \tabularnewline
-Lysithea &  &  &  & \tabularnewline
-Pasiphae &  & &  & \tabularnewline
-Sinope &  &  &  & \tabularnewline
+Ananke & 22 & 12 & 16 & 50 \tabularnewline
+Carme & 25 & 20 & 14 & 59 \tabularnewline
+Elara & 32 & 14 & 16 & 62 \tabularnewline
+Himalia & 25 & 15 & 12 & 52 \tabularnewline
+Lysithea & 22 & 16 & 11 & 49 \tabularnewline
+Pasiphae & 26 & 19 & 20 & 65 \tabularnewline
+Sinope & 19 & 15 & 21 & 55 \tabularnewline
 \hdashline
-Phoebe & 13 & 22 & 98 & 133\tabularnewline
+Phoebe & 13 & 32 & 98 & 143 \tabularnewline
 \hdashline
-Nereid & 40 & 11 & 1 & 52 \tabularnewline
-Triton &  &  &  & \tabularnewline
+Nereid & 41 & 11 & 1 & 53 \tabularnewline
+Triton &  &  &  &  \tabularnewline
 \hline
 \end{tabular}
 \par \end{centering}
+Occultations predicted using the UCAC4 catalogue. For Nereid and Triton, the occultations in 2015 and 2016 were predicted using the WFI catalogue as explained in Sec. \ref{Sec: predictions}.
 \end{table}
+
+Concerning the UCAC4 stars, an accuracy of about 20-50 mas in the star position would give a 15-40\% probability of observe such an event by Ananke, the smallest irregular satellite in the sample. For Himalia, the occultation would have 80-100\% probability. Combined with a mean accuracy in the position of 30 mas for Himalia and 100 mas for Ananke mas published in Table 2 of \cite{Jacobson2012}, the probability of success would be around 50-80\% for Himalia and $\approx$5\% for Ananke. Observations a few days before the date of occultation predicted may diminish the combined accuracy to 40-80 mas, depending on the magnitude of the objects.
+
+The tests made with an occultation expected to happen in March 03, 2015 for Himalia showed that this event could probably be observed in case there were observers available in the shadow area. Fig. \ref{Fig: occ-Himalia} show the maps made for 4 different offset corrections as explained in Sec. \ref{Sec: testes}. Table \ref{Tab: comparison-Himalia} show numerically the difference between the maps. A similar test was made for an occultation of Elara in March 30, 2015. The difference between the maps can be seen summarized in Table \ref{Tab: comparison-Elara}.
+
+Continuous observations of the satellites and candidates are recommended and new numerical integrations of the orbits of the satellites are expected to reduce the respective position errors. The GAIA catalogue, which are to be released in mid-2016 will improve the position error of the stars and occultations of fainter stars not present in the UCAC4 catalogue may be found as candidates. Consequently, the astrometry of the satellites with the GAIA catalogue will improve the position errors of the satellites that will allow for better predictions and a bigger probability of observe stellar occultations by irregular satellites.
 
 %We managed a large database with FITS images acquired by 5 telescopes in 3 sites between 1992 and 2014. From that, we identified 8466 observations of irregular satellites, from which we managed to obtain 6523 suitable astrometric positions, giving a total of 3666 positions for 12 satellites of Jupiter, 1920 positions for 4 satellites of Saturn, 35 positions for Sycorax (Uranus) and 902 positions for Nereid (Neptune).
 
