--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -127,11 +127,11 @@ Laboratório Interinstitucional de e-Astronomia - LIneA, Rua Gal. José Cristino
 
 
 \abstract
-%{The irregular satellites of the giant planets are believed to have been captured during the evolution of the solar system. Knowing their physical parameters, such as size, density and albedo is important to constrain where they came from and how they were captured. The best way to obtain these parameters are observations in situ by spacecrafts or from stellar occultations by the objects. Both techniques demand that the orbits are well known.}
-%{We aimed to obtain good astrometric positions of irregular satellites in order to improve their orbits and ephemeris.}
-%{We identified and reduced observations of several irregular satellites from three databases containing more than 8000 images obtained between 1992 and 2014 at three sites (Observatório do Pico dos Dias, Observatoire de Haute-Provence and European Southern Observatory - La Silla).  We used the software PRAIA (Platform for Reduction of Astronomical Images Automatically) to make the astrometric reduction of the CCD frames. The UCAC4 catalogue represented the International Celestial Reference System in the reductions. The identification of the satellites in the frames was done through their ephemerides as determined from the SPICE/NAIF kernels. Some procedures were taken to overcome missing or incomplete information (coordinates, date), mostly for the older images.}
-%{We managed to obtain more than 6000 positions for 18 irregular satellites, being 12 of Jupiter, 4 of Saturn, 1 of Uranus (Sycorax) and 1 of Neptune (Nereid). For some satellites the number of obtained positions is more than 50\% of that used in earlier orbital numerical integrations.}
-%{Comparison of our positions with recent JPL ephemeris suggests the presence of systematic errors in the orbits for some of the irregular satellites. The most evident case was an error in the inclination of Carme.}
+{The irregular satellites of the giant planets are believed, due to their orbital configurations, to not have been formed where they are located, but they were probably captured in the early solar system. To constrain their origin location, it's important to know their physical parameters, such as size, density and albedo. These informations would to understand better their densities and consequently their composition. The best ground-based technique to obtain these parameters is the observation of stellar occultations by these objects.}
+{We aimed to predict stellar occultation for the seven biggest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope and Ananke; for the irregular satellite of Saturn: Phoebe; and the satellites of Neptune: Nereid and Triton.}
+{\textcolor{red}{We identified and reduced observations of several irregular satellites from three databases containing more than 8000 images obtained between 1992 and 2014 at three sites (Observatório do Pico dos Dias, Observatoire de Haute-Provence and European Southern Observatory - La Silla).  We used the software PRAIA (Platform for Reduction of Astronomical Images Automatically) to make the astrometric reduction of the CCD frames. The UCAC4 catalogue represented the International Celestial Reference System in the reductions. The identification of the satellites in the frames was done through their ephemerides as determined from the SPICE/NAIF kernels. Some procedures were taken to overcome missing or incomplete information (coordinates, date), mostly for the older images.}}
+{\textcolor{red}{We managed to obtain more than 6000 positions for 18 irregular satellites, being 12 of Jupiter, 4 of Saturn, 1 of Uranus (Sycorax) and 1 of Neptune (Nereid). For some satellites the number of obtained positions is more than 50\% of that used in earlier orbital numerical integrations.}}
+{\textcolor{red}{Comparison of our positions with recent JPL ephemeris suggests the presence of systematic errors in the orbits for some of the irregular satellites. The most evident case was an error in the inclination of Carme.}}
 
 
 \keywords{Occultations - Planets and satellites: general - Planets and satellites: individual: Jovian and Saturnian irregular satellites}
@@ -343,7 +343,7 @@ Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding
 \end{centering}
 \end{figure*}
 
-In this event, it is possible to see that the shade does not vary by much among the four maps suggesting thatthere was a good probability of observing the event. In fact, the biggest differences between the shadows of the four maps were \textcolor{red}{22s and 109km} in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
+In this event, it is possible to see that the shade does not vary by much among the four maps suggesting thatthere was a good probability of observing the event. In fact, the biggest differences between the shadows of the four maps were \textcolor{red}{22s} along the shadow path and \textcolor{red}{109km} in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
 
 \begin{table}
 \caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015. \textcolor{red}{Tem que ver direito o offset do ajuste}}
@@ -363,7 +363,7 @@ Mar. 03 Obs. & -10s & -19mas (61km)\tabularnewline
 
 \end{table}
 
-The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 they could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The biggest differences between them were 74s along the shadow path and 307km perpendicular to it (see table \ref{Tab: comparison-Elara}).
+The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 they could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The biggest differences between them were \textcolor{red}{74s} along the shadow path and \textcolor{red}{307km} perpendicular to it (see table \ref{Tab: comparison-Elara}).
 
 \begin{table}
 \caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015. \textcolor{red}{Tem que ver direito o offset do ajuste}}
